fix ActionBar tittle. Create NewCategoryActivity, CategoryAdapter, categories_list.xml and new_category.xml. Add new method getCategories to CategoryTaskDataSource.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,4 +10,11 @@
     tools:context=".ui.activity.MainActivity"
     android:background="#EEF5DB">
 
+    <GridView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/categoriesGridView"
+        android:layout_alignParentLeft="true"
+        android:numColumns="2"/>
+
 </RelativeLayout>
