--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,9 +3,11 @@
     xmlns:tools="schemas.android.com/tools"
     tools:context="com.example.rodri.todo.ui.activity.MainActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto" >
-    <item android:id="@+id/whitePlus"
-        android:title="Add"
+
+    <item android:id="@+id/addCategory"
+        android:title="@string/add_category"
         android:icon="@drawable/white_plus"
         app:showAsAction="always">
     </item>
+
 </menu>
