--- a/app/src/main/res/layout/new_task.xml
+++ b/app/src/main/res/layout/new_task.xml
@@ -52,8 +52,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/set_deadline_date"
-        android:id="@+id/btSetDeadlineDate"
+        android:text="@string/set_due_date"
+        android:id="@+id/btSetDueDate"
         android:layout_alignParentStart="true"
         android:layout_marginTop="40dp"
         android:layout_below="@+id/txtNumPriority" />
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:text="@string/confirm"
         android:id="@+id/btConfirmNewTask"
-        android:layout_below="@+id/btSetDeadlineDate"
+        android:layout_below="@+id/btSetDueDate"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="53dp" />
 
