--- a/app/src/main/res/layout/custom_group.xml
+++ b/app/src/main/res/layout/custom_group.xml
@@ -7,17 +7,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/txtGroupName"
+        android:textSize="12pt"
+        android:textStyle="bold"
+        android:layout_gravity="center"
+        android:textColor="#BF1519"
         android:gravity="left"
         android:layout_marginLeft="15dp"
-        android:layout_weight="6"/>
+        android:layout_weight="6"
+        android:paddingBottom="7dp"/>
 
     <ImageView
-        android:layout_width="42dp"
-        android:layout_height="42dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:id="@+id/imgDownArrow"
         android:gravity="right"
-        android:layout_marginRight="8dp"
         android:src="@drawable/re_down_arrow"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:paddingTop="5dp"/>
 
 </LinearLayout>
