--- a/app/src/main/res/layout/custom_item.xml
+++ b/app/src/main/res/layout/custom_item.xml
@@ -1,22 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="match_parent" android:stretchColumns="0,1"
+     android:shrinkColumns="*">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <TableRow
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/txtTaskName"
-        android:gravity="left"
-        android:layout_weight="1"
-        android:layout_marginLeft="50dp"/>
+        android:layout_gravity="center_horizontal"
+        android:paddingTop="5dp"
+        android:paddingLeft="5dp"
+        android:paddingBottom="5dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtDueDate"
-        android:gravity="right"
-        android:layout_weight="1"
-        android:layout_marginRight="15dp"/>
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtTaskName"
+            android:layout_weight="1"
+            android:layout_gravity="left"
+            android:layout_marginLeft="25dp"
+            android:textSize="8pt"
+            android:layout_column="0"/>
 
-</LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtDueDate"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_marginRight="10dp"
+            android:textSize="10pt"
+            android:textColor="#E74C3C"
+            android:layout_column="1"/>
+
+
+    </TableRow>
+
+</TableLayout>
