--- a/app/src/main/res/layout/custom_item.xml
+++ b/app/src/main/res/layout/custom_item.xml
@@ -12,10 +12,9 @@
         android:paddingBottom="5dp">
 
         <TextView
-            android:layout_width="120dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:id="@+id/txtTaskName"
-            android:layout_weight="1"
             android:layout_gravity="left"
             android:layout_marginLeft="25dp"
             android:textSize="8pt"
@@ -26,7 +25,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/txtDueDate"
             android:layout_gravity="center_horizontal|center_vertical"
-            android:layout_marginRight="10dp"
+            android:paddingRight="20dp"
             android:textSize="10pt"
             android:textColor="#E74C3C"
             android:layout_column="1"/>
