--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="pastTask">
+        <item name="android:textStyle">italic</item>
+        <item name="android:textColor">#2B2D42</item>
+    </style>
+
 </resources>
