--- a/app/src/main/res/layout/task_list.xml
+++ b/app/src/main/res/layout/task_list.xml
@@ -3,11 +3,17 @@
     android:layout_width="match_parent" android:layout_height="match_parent" android:background="#EEF5DB">
 
 
-    <ListView
+    <!--<ListView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/tasksListView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp" />
+        android:layout_marginTop="80dp" />-->
+    <ExpandableListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tasksExpListView"
+        android:layout_marginTop="80dp"
+        android:groupIndicator="@drawable/group_indicator"/>
 </RelativeLayout>
