create rounded_button.xml and custom_buttom.xml. Change app style (button, background). Add method 'removeOldAlarms' to CategoryTaskDataSource

--- a/app/src/main/res/layout/task_list.xml
+++ b/app/src/main/res/layout/task_list.xml
@@ -17,6 +17,8 @@
         android:layout_height="wrap_content"
         android:text="@string/rememberMe"
         android:id="@+id/btSetNotification"
+        android:background="@drawable/rounded_button"
+        style="@style/CustomButtonStyle"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="31dp"
