--- a/app/src/main/res/layout/new_category.xml
+++ b/app/src/main/res/layout/new_category.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent" android:padding="20dp">
+    android:layout_width="match_parent" android:layout_height="match_parent" android:padding="20dp" android:background="#EEF5DB">
 
     <TextView
         android:layout_width="wrap_content"
@@ -27,6 +27,8 @@
         android:layout_height="wrap_content"
         android:text="@string/confirm"
         android:id="@+id/btConfirm"
+        android:background="@drawable/rounded_button"
+        style="@style/CustomButtonStyle"
         android:layout_below="@+id/etCategoryName"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="106dp" />
