--- a/app/src/main/res/layout/new_task.xml
+++ b/app/src/main/res/layout/new_task.xml
@@ -8,6 +8,7 @@
         android:text="@string/new_task"
         android:id="@+id/txtNewTask"
         android:textSize="14pt"
+        android:textStyle="bold"
         android:layout_marginTop="29dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -28,6 +29,7 @@
         android:id="@+id/txtPriority"
         android:text="@string/priority"
         android:textSize="11pt"
+        android:textStyle="bold"
         android:layout_marginLeft="10dp"
         android:layout_below="@id/etTaskName"
         android:layout_marginTop="40dp"/>
@@ -54,6 +56,8 @@
         android:layout_height="wrap_content"
         android:text="@string/set_due_date"
         android:id="@+id/btSetDueDate"
+        android:background="@drawable/rounded_button"
+        style="@style/CustomButtonStyle"
         android:layout_alignParentStart="true"
         android:layout_marginTop="40dp"
         android:layout_below="@+id/txtNumPriority" />
@@ -63,6 +67,8 @@
         android:layout_height="wrap_content"
         android:text="@string/confirm"
         android:id="@+id/btConfirmNewTask"
+        android:background="@drawable/rounded_button"
+        style="@style/CustomButtonStyle"
         android:layout_below="@+id/btSetDueDate"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="53dp" />
