--- a/app/src/main/res/layout/task_list.xml
+++ b/app/src/main/res/layout/task_list.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/tasksExpListView"
         android:layout_marginTop="90dp"
-        android:groupIndicator="@drawable/group_indicator"/>
+        android:groupIndicator="@drawable/group_indicator"
+        android:scrollbars="none"/>
 
 </RelativeLayout>
