--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,6 +4,13 @@
     tools:context="com.example.rodri.todo.ui.activity.MainActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto" >
 
+    <item android:id="@+id/removeCategory"
+        android:title="@string/remove_category"
+        android:icon="@drawable/trash_icon"
+        app:showAsAction="always">
+
+    </item>
+
     <item android:id="@+id/addCategory"
         android:title="@string/add_category"
         android:icon="@drawable/white_plus"
