--- a/app/src/main/res/layout/custom_remove_category_item.xml
+++ b/app/src/main/res/layout/custom_remove_category_item.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:padding="8dp">
+    android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:id="@+id/txtCategoryNameToBeRemoved"
+        android:layout_gravity="center"
+        android:gravity="left"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:textSize="10pt"
         android:layout_weight="6"/>
 
     <CheckBox
@@ -15,5 +21,6 @@
         android:id="@+id/removeCategoryCheckBox"
         android:focusable="false"
         android:focusableInTouchMode="false"
+        android:gravity="right"
         android:layout_weight="1"/>
 </LinearLayout>
