--- a/app/src/main/res/layout/remove_category.xml
+++ b/app/src/main/res/layout/remove_category.xml
@@ -2,13 +2,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent" android:background="#EEF5DB">
 
+    <TextView android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtCategoriesToBeRemoved"
+        android:text="@string/categories_to_be_removed"
+        android:textSize="13pt"
+        android:textStyle="bold|italic"
+        android:layout_marginTop="20pt"
+        android:layout_centerHorizontal="true"/>
+
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/removeCategoryListView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"
+        android:layout_below="@+id/txtCategoriesToBeRemoved"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="100dp"
         android:scrollbars="none"/>
 
